# CloudRuinOS

./: .env.example  .gitignore  CLAUDE.md  CONSOLE_ENV_SETUP.md  Cargo.toml  README.md  SECRETS_SETUP.md  agent_verification.rs  checkpoint_verification_report.md  health_monitoring_verification_report.md  package-lock.json  package.json  run_log.txt  system_verification_report.md  task_7_4_completion_report.md  tmp_jobs.json  verify_agent.rs
.claude/: settings.local.json
.cunzhi-memory/: context.md  metadata.json
.github/: DEPLOYMENT_CONFIG.md
.github/workflows/: build-cross-platform.yml  deploy-console.yml  deploy-server.yml  test-agent.yml
agent/: .gitkeep  Cargo.toml  Cross.toml  Makefile  build.rs
agent/examples/: test_debug_proxy.rs
agent/install/: config.toml  config.toml.example  install.bat  install.sh  uninstall.bat  uninstall.sh
agent/proptest-regressions/core/: network_config_tests.txt  property_tests.txt
agent/proptest-regressions/platform/: tests.txt
agent/src/: config.rs  lib.rs  main.rs  task_handler.rs
agent/src/core/: audit.rs  cmd_executor.rs  command.rs  crypto.rs  enrollment.rs  files.rs  heartbeat.rs  mod.rs  network_config_tests.rs  property_tests.rs  protocol.rs  reconnect.rs  scheduler.rs  state.rs  task_manager.rs
agent/src/platform/: linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
agent/src/terminal/: manager.rs  mod.rs  session.rs
agent/src/terminal/pty/: mod.rs  unix.rs  windows.rs
agent/src/transport/: mod.rs
agent/tests/: debug_proxy_test.rs  integration_test.rs
console/: .env.development  .env.example  .gitkeep  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
console/src/: App.tsx  index.css  vite-env.d.ts
console/test/: mock-agent.js  simple-websocket-test.js
docs/: .gitkeep  api-reference.md  architecture.md  d1_deployment_guide.md  deployment-guide.md  kv_optimization_comparison.md  kv_optimization_report.md  project-overview.md  secrets-management.md  security-guide.md  terminal_architecture.md  terminal_examples.md  terminal_implementation_summary.md  terminal_protocol.md  terminal_protocol_examples.md  terminal_quick_reference.md  terminal_usage_guide.md  test.md
scripts/: build-cross-platform.bat  build-cross-platform.sh  deploy-d1-terminal.ps1  dev-setup.bat  dev-setup.sh  dev-stop.bat  dev-stop.sh  package-agent.sh  query-d1-terminal.ps1  reduce-test-examples-minimal.js  reduce-test-examples.js  reduce-test-runs-simple.ps1  reduce-test-runs.ps1  rollback-d1-terminal.ps1  run-tests-fast.bat  setup-secrets.bat  setup-secrets.sh  test-cross-platform.bat  test-cross-platform.sh  test-optimization-final-report.md  test-optimization-summary.bat
server/: .gitkeep  README.md  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts  wrangler.dev.toml  wrangler.toml  wrangler.toml.example
server/migrations/: 0001_initial_schema.sql  0002_add_tasks_tables.sql  0002_central_config.sql  (+4 more)
test/: heartbeat_protocol_test.rs  heartbeat_task_integration_test.rs  test-d1-terminal.ps1
(+144 files in other folders)
