[workspace]
members = ["agent"]
resolver = "2"

[workspace.dependencies]
# 网络和 HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# 加密和安全
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# 异步和并发
futures = "0.3"
async-trait = "0.1"

# 文件系统和路径
dirs = "5.0"

# DNS over HTTPS
trust-dns-resolver = "0.23"

# 测试
proptest = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 跨平台编译优化配置
[profile.release-windows]
inherits = "release"
target = "x86_64-pc-windows-gnu"

[profile.release-linux]
inherits = "release"
target = "x86_64-unknown-linux-musl"

[profile.release-macos]
inherits = "release"
target = "x86_64-apple-darwin"